--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/koa": "^2.11.5",
     "@types/node": "^12.0.0",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
+    "@typescript-eslint/parser": "^4.5.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
@@ -24,7 +24,7 @@
     "dotenv-expand": "5.1.0",
     "eslint": "7.2.0",
     "eslint-loader": "3.0.3",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-import": "^2.22.1",
     "fs-extra": "^8.1.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
@@ -111,6 +111,7 @@
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-jest": "^24.1.0",
     "prettier": "^2.1.2"
   }
