--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,10 @@
     "lib": [
       "esnext"
     ],
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*"]
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
