--- a/package.json
+++ b/package.json
@@ -4,10 +4,6 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.9.0",
-    "@svgr/webpack": "4.3.3",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/koa": "^2.11.5",
     "@types/node": "^12.0.0",
@@ -26,9 +22,7 @@
     "eslint-loader": "3.0.3",
     "eslint-plugin-import": "^2.22.1",
     "fs-extra": "^8.1.0",
-    "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
-    "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "koa": "^2.13.0",
@@ -38,11 +32,8 @@
     "resolve": "1.15.0",
     "ts-pnp": "1.1.6",
     "typescript": "~3.7.2",
-    "url-loader": "2.3.0",
     "webpack": "4.42.0",
-    "webpack-dev-server": "3.11.0",
-    "webpack-node-externals": "^2.5.2",
-    "workbox-webpack-plugin": "4.3.1"
+    "webpack-node-externals": "^2.5.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
