--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "clsx": "^1.1.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "7.2.0",
@@ -27,9 +28,11 @@
     "jest-watch-typeahead": "0.4.2",
     "koa": "^2.13.0",
     "nodemon": "^2.0.5",
+    "pg": "^8.4.1",
     "pnp-webpack-plugin": "1.6.4",
     "react-dev-utils": "^10.2.1",
     "resolve": "1.15.0",
+    "sequelize": "^6.3.5",
     "ts-pnp": "1.1.6",
     "typescript": "~3.7.2",
     "webpack": "4.42.0",
