--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.9.0",
+    "@koa/cors": "^3.1.0",
     "@types/jest": "^24.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.11.5",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa__cors": "^3.0.2",
     "@types/node": "^12.0.0",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.5.0",
@@ -26,7 +30,9 @@
     "jest": "24.9.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
     "nodemon": "^2.0.5",
     "pg": "^8.4.1",
     "pnp-webpack-plugin": "1.6.4",
