--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@babel/core": "7.9.0",
     "@koa/cors": "^3.1.0",
+    "@koa/router": "^9.4.0",
     "@types/jest": "^24.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.11.5",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa__cors": "^3.0.2",
+    "@types/koa__router": "^8.0.3",
     "@types/node": "^12.0.0",
+    "@types/webpack-env": "^1.15.3",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.5.0",
     "babel-eslint": "10.1.0",
