--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@babel/core": "7.9.0",
     "@koa/cors": "^3.1.0",
     "@koa/router": "^9.4.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/bluebird": "^3.5.32",
     "@types/jest": "^24.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.11.5",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa__cors": "^3.0.2",
     "@types/koa__router": "^8.0.3",
-    "@types/node": "^12.0.0",
+    "@types/node": "^14.14.5",
+    "@types/validator": "^13.1.0",
     "@types/webpack-env": "^1.15.3",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.5.0",
@@ -21,6 +24,7 @@
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
+    "bcryptjs": "^2.4.3",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "clsx": "^1.1.1",
@@ -40,8 +44,10 @@
     "pg": "^8.4.1",
     "pnp-webpack-plugin": "1.6.4",
     "react-dev-utils": "^10.2.1",
+    "reflect-metadata": "^0.1.13",
     "resolve": "1.15.0",
-    "sequelize": "^6.3.5",
+    "sequelize": "^5.21.5",
+    "sequelize-typescript": "^1.1.0",
     "ts-pnp": "1.1.6",
     "typescript": "~3.7.2",
     "webpack": "4.42.0",
