feature: add color

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "bcryptjs": "^2.4.3",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "clsx": "^1.1.1",
+    "chalk": "^4.1.0",
+    "colors": "^1.4.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "7.2.0",
