--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-loader": "3.0.3",
     "eslint-plugin-import": "^2.22.1",
     "fs-extra": "^8.1.0",
+    "git-hooks": "^1.1.10",
     "jest": "24.9.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
@@ -55,6 +56,7 @@
     "webpack-node-externals": "^2.5.2"
   },
   "scripts": {
+    "precommit": "node scripts/checkErrorsStart.js",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
