--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.9.0",
     "@koa/cors": "^3.1.0",
     "@koa/router": "^9.4.0",
+    "@savchenko91/cra-precommit-eslint-typechecking": "^1.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/bluebird": "^3.5.32",
     "@types/jest": "^24.0.0",
@@ -56,7 +57,7 @@
     "webpack-node-externals": "^2.5.2"
   },
   "scripts": {
-    "precommit": "node scripts/checkErrorsStart.js",
+    "precommit": "yarn cra-precommit-eslint-typechecking",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
